Fix sandbox edgeq getting too big

--- a/pages/sandbox/style.css
+++ b/pages/sandbox/style.css
@@ -10,3 +10,11 @@
     margin: auto;
     border: 1px solid black;
 }
+
+#edgeQueueDisplay {
+    height: 400px;
+    max-width: 200px;
+    overflow: auto;
+    white-space: nowrap;
+    border: 1px solid black;
+}
